--- a/index_bck.html
+++ b/index_bck.html
@@ -69,6 +69,64 @@
 	<!-- BEGIN WRAPPER -->
 	<div id="wrapper">
 
+		<!-- BEGIN HEADER -->
+		<header id="header">
+			<div class="nav-section">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
+							<a href="#hero" class="nav-logo"><img src="images/logo.png" alt="Neela" /></a>
+
+							<!-- BEGIN MAIN MENU -->
+							<nav class="navbar">
+
+								<ul class="nav navbar-nav">
+									<li><a href="#hero">Home</a></li>
+
+									<li class="dropdown">
+										<a href="#about-us" data-toggle="dropdown" data-hover="dropdown">About Us<b class="caret"></b></a>
+										<ul class="dropdown-menu">
+											<li><a href="#loveline">Loveline</a></li>
+										</ul>
+									</li>
+
+									<li class="dropdown">
+										<a href="#the-wedding" data-toggle="dropdown" data-hover="dropdown">The Wedding<b class="caret"></b></a>
+										<ul class="dropdown-menu">
+											<li><a href="#the-wedding">Invite</a></li>
+											<li><a href="#location">Location</a></li>
+											<li><a href="#bridesmaids">Bridesmaids</a></li>
+											<li><a href="#testimonials">Testimonials</a></li>
+											<li><a href="#groomsmen">Groomsmen</a></li>
+											<li><a href="#giftregistry">Gift Registry</a></li>
+											<li class="dropdown-submenu">
+												<a href="#">Another Menu</a>
+												<ul class="dropdown-menu">
+													<li><a href="#">Another Menu</a></li>
+													<li><a href="#">Another Menu</a></li>
+												</ul>
+											</li>
+										</ul>
+									</li>
+
+									<li><a href="#gallery">Gallery</a></li>
+
+									<li><a href="#blog">Blog</a></li>
+
+									<li><a href="#rsvp">RSVP</a></li>
+								</ul>
+
+								<button id="nav-mobile-btn"><i class="fas fa-bars"></i></button><!-- Mobile menu button -->
+							</nav>
+							<!-- END MAIN MENU -->
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+		<!-- END HEADER -->
+
 
 		<!-- BEGIN HERO SECTION -->
 		<section id="hero" class="bg-slideshow section-divider-bottom-1">
@@ -80,15 +138,15 @@
 							<h2 data-animation-direction="fade" data-animation-delay="600">Save the Date</h2>
 
 							<h1 class="hero-title light ">
-								<span data-animation-direction="from-right" data-animation-delay="300">Paolo</span>
+								<span data-animation-direction="from-right" data-animation-delay="300">Isabella</span>
 								<small data-animation-direction="from-top" data-animation-delay="300">&</small>
-								<span data-animation-direction="from-left" data-animation-delay="300">Giulia</span>
+								<span data-animation-direction="from-left" data-animation-delay="300">Andrew</span>
 							</h1>
 
-							<div class="hero-subtitle light" data-animation-direction="fade" data-animation-delay="1000">Marzo <span>23</span> 2024</div>
+							<div class="hero-subtitle light" data-animation-direction="fade" data-animation-delay="1000">SEPT <span>24</span> 2022</div>
 
 							<div data-animation-direction="fade" data-animation-delay="1000">
-								<a href="#rsvp" class="btn btn-light scrollto">Conferma</a>
+								<a href="#rsvp" class="btn btn-light scrollto">RSVP</a>
 							</div>
 						</div>
 
