--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		}
 
 		.visually-spaced {
-			padding-left: 15px;
+			padding-left: 2%;
 		}
 	</style>
 </head>
@@ -368,7 +368,7 @@
 
 						<div class="timeline_footer">
 							<i class="icon-diamond-ring" data-animation-direction="from-top" data-animation-delay="250"></i>
-							<div class="punchline" data-animation-direction="from-bottom" data-animation-delay="250"><small>E ora inizia il</small>per sempre!</div>
+							<div class="punchline" data-animation-direction="from-bottom" data-animation-delay="250"><small>E ora inizia il</small>per sempre...</div>
 						</div>
 
 					</div>
@@ -487,8 +487,9 @@
 						<h4><span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br>
 						Intestato a<br>
 						Giulia Lattanzi e Paolo Fantozzi</h4>
+						<br>
 					</div>
-					<div class="col-md-3 col-xl-3 my-auto"><img class="img-fluid" src="images/sushi.png" style="max-width: 60%;"></div>
+					<div class="col-md-3 col-xl-3 my-auto text-center"><img class="img-fluid" src="images/sushi.png" style="max-width: 60%;"></div>
 				</div>
 			</div>
 		</section>
@@ -508,7 +509,7 @@
 								<iframe
 									src="https://docs.google.com/forms/d/e/1FAIpQLScNwq9jqxHTDOaUtgki3c3QPWzrcj3SDD0FQYirt-MG2k3CYw/viewform?embedded=true"
 									width="640"
-									height="1200"
+									height="1400"
 									frameborder="0"
 									marginheight="0"
 									marginwidth="0"
