--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		}
 
 		.visually-spaced {
-			padding-left: 2%;
+			padding-left: 1%;
 		}
 	</style>
 </head>
@@ -148,7 +148,7 @@
 
 					<div class="element col-md-6 col-xl-4" data-animation-direction="from-right" data-animation-delay="400">
 						<div class="image">
-							<img src="images/lasposa2.png" alt="" />
+							<img src="images/lasposa3.jpg" alt="" />
 							<div class="hover-info neela-style">
 								<div class="content">
 									<h3>Giulia Lattanzi<small>La sposa</small></h3>
@@ -169,25 +169,31 @@
 						<!-- <h3><small>We are</small>Getting Married</h3> -->
 						<h3>Manca poco</h3>
 						<div class="countdown hero-subtitle light" data-date="2024/03/23 10:30 AM"></div>
-						<div class="col-lg-6 offset-lg-4 text-start" data-animation-direction="from-bottom" data-animation-delay="300">
-							<p>Due amanti felici fanno un solo pane,<br/>
-								una sola goccia di luna nell'erba,<br/>
-								lascian camminando due ombre che s'uniscono,<br/>
-								lasciano un solo sole vuoto in un letto.<br/>
-								<br/>
-								Di tutte le verità scelsero il giorno:<br/>
-								non s'uccisero con fili, ma con un aroma,<br/>
-								e non spezzarono la pace né le parole.<br/>
-								È la felicità una torre trasparente.<br/>
-								<br/>
-								L'aria, il vino vanno coi due amanti,<br/>
-								gli regala la notte i suoi petali felici,<br/>
-								hanno diritto a tutti i garofani.<br/>
-								<br/>
-								Due amanti felici non han fine né morte,<br/>
-								nascono e muoiono più volte vivendo,<br/>
-								hanno l'eternità della natura.</p>
-							<p class="text-end fst-italic">Pablo Neruda</p>
+						<div class="col-lg-8 offset-lg-2 text-start" data-animation-direction="from-bottom" data-animation-delay="300">
+							<figure>
+								<blockquote class="blockquote">
+									<p>Due amanti felici fanno un solo pane,<br/>
+										una sola goccia di luna nell'erba,<br/>
+										lascian camminando due ombre che s'uniscono,<br/>
+										lasciano un solo sole vuoto in un letto.<br/>
+										<br/>
+										Di tutte le verità scelsero il giorno:<br/>
+										non s'uccisero con fili, ma con un aroma,<br/>
+										e non spezzarono la pace né le parole.<br/>
+										È la felicità una torre trasparente.<br/>
+										<br/>
+										L'aria, il vino vanno coi due amanti,<br/>
+										gli regala la notte i suoi petali felici,<br/>
+										hanno diritto a tutti i garofani.<br/>
+										<br/>
+										Due amanti felici non han fine né morte,<br/>
+										nascono e muoiono più volte vivendo,<br/>
+										hanno l'eternità della natura.</p>
+								</blockquote>
+								<figcaption class="blockquote-footer text-end">
+									<cite title="Author">Pablo Neruda</cite>
+								</figcaption>
+							</figure>
 						</div>
 					</div>
 				</div>
@@ -468,7 +474,46 @@
 		<!-- END WEDDING LOCATION SECTION -->
 
 		<!-- BEGIN WEDDING GIFTS SECTION -->
-		<section id="giftregistry" class="section-bg-color parallax-background">
+		<section class="menu-section no-padding-top no-padding-bottom" id="giftregistry">
+			<div id="menu-image" class="half-img"></div>
+
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-2 menu-wrapper">
+						<div class="neela-style"><span class="h-lines"></span><span class="v-lines"></span>
+							<div class="menu-top-flowers"></div>
+
+							<h2 class="section-title-lg uppercase desc"><strong>Viaggio</strong><small>di nozze</small></h2>
+
+							<ul class="menu-items">
+								<li>
+									Il nostro sogno è sempre stato visitare il Giappone
+									<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" zoomAndPan="magnify" viewBox="0 0 30 30.000001" height="40" preserveAspectRatio="xMidYMid meet" version="1.0"><defs><clipPath id="id1"><path d="M 2.226562 6.132812 L 27.628906 6.132812 L 27.628906 24.277344 L 2.226562 24.277344 Z M 2.226562 6.132812 " clip-rule="nonzero"/></clipPath></defs><g clip-path="url(#id1)"><path fill="rgb(93.328857%, 93.328857%, 93.328857%)" d="M 27.621094 21.488281 C 27.621094 23.027344 26.359375 24.277344 24.800781 24.277344 L 5.054688 24.277344 C 3.496094 24.277344 2.234375 23.027344 2.234375 21.488281 L 2.234375 8.925781 C 2.234375 7.382812 3.496094 6.132812 5.054688 6.132812 L 24.800781 6.132812 C 26.359375 6.132812 27.621094 7.382812 27.621094 8.925781 Z M 27.621094 21.488281 " fill-opacity="1" fill-rule="nonzero"/></g><path fill="rgb(92.939758%, 10.5896%, 18.429565%)" d="M 19.863281 15.207031 C 19.863281 15.527344 19.832031 15.84375 19.769531 16.160156 C 19.707031 16.472656 19.613281 16.78125 19.488281 17.074219 C 19.363281 17.371094 19.210938 17.652344 19.03125 17.921875 C 18.851562 18.1875 18.648438 18.433594 18.417969 18.660156 C 18.1875 18.886719 17.941406 19.089844 17.671875 19.269531 C 17.402344 19.445312 17.117188 19.597656 16.816406 19.71875 C 16.515625 19.84375 16.207031 19.933594 15.890625 19.996094 C 15.574219 20.058594 15.25 20.089844 14.925781 20.089844 C 14.601562 20.089844 14.28125 20.058594 13.964844 19.996094 C 13.644531 19.933594 13.335938 19.84375 13.039062 19.71875 C 12.738281 19.597656 12.453125 19.445312 12.183594 19.269531 C 11.914062 19.089844 11.664062 18.886719 11.4375 18.660156 C 11.207031 18.433594 11.003906 18.1875 10.824219 17.921875 C 10.644531 17.652344 10.492188 17.371094 10.367188 17.074219 C 10.242188 16.78125 10.148438 16.472656 10.085938 16.160156 C 10.023438 15.84375 9.992188 15.527344 9.992188 15.207031 C 9.992188 14.886719 10.023438 14.566406 10.085938 14.253906 C 10.148438 13.9375 10.242188 13.632812 10.367188 13.335938 C 10.492188 13.039062 10.644531 12.757812 10.824219 12.492188 C 11.003906 12.226562 11.207031 11.980469 11.4375 11.75 C 11.664062 11.523438 11.914062 11.324219 12.183594 11.144531 C 12.453125 10.964844 12.738281 10.816406 13.039062 10.691406 C 13.335938 10.570312 13.644531 10.476562 13.964844 10.414062 C 14.28125 10.351562 14.601562 10.320312 14.925781 10.320312 C 15.25 10.320312 15.574219 10.351562 15.890625 10.414062 C 16.207031 10.476562 16.515625 10.570312 16.816406 10.691406 C 17.117188 10.816406 17.402344 10.964844 17.671875 11.144531 C 17.941406 11.324219 18.1875 11.523438 18.417969 11.75 C 18.648438 11.980469 18.851562 12.226562 19.03125 12.492188 C 19.210938 12.757812 19.363281 13.039062 19.488281 13.335938 C 19.613281 13.632812 19.707031 13.9375 19.769531 14.253906 C 19.832031 14.566406 19.863281 14.886719 19.863281 15.207031 Z M 19.863281 15.207031 " fill-opacity="1" fill-rule="nonzero"/></svg>
+									<br>Se volete darci una mano a realizzarlo, potete contribuire usando le coordinate indicate di seguito.
+								</li>
+
+								<li>
+									<div class="row">
+										<div class="col-md-3 col-xl-3 my-auto"><img class="img-fluid" src="images/fuji_sakura.png"></div>
+										<div class="col-md-6 col-xl-6 text-center my-auto">
+											<h4><span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br>
+											Intestato a<br>
+											Giulia Lattanzi e Paolo Fantozzi</h4>
+											<br>
+										</div>
+										<div class="col-md-3 col-xl-3 my-auto text-center"><img class="img-fluid" src="images/sushi.png" style="max-width: 60%;"></div>
+									</div>
+								</li>
+							</ul>
+
+							<div class="menu-bottom-flowers"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- <section id="giftregistry" class="section-bg-color parallax-background">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 col-xl-12">
@@ -492,7 +537,7 @@
 					<div class="col-md-3 col-xl-3 my-auto text-center"><img class="img-fluid" src="images/sushi.png" style="max-width: 60%;"></div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- END WEDDING GIFTS SECTION -->
 
 
@@ -501,7 +546,8 @@
 			<div class="container">
 
 				<div class="row">
-					<div class="col-lg-10 offset-lg-1 col-xl-10 offset-xl-1  col-xxl-10 offset-xxl-1">
+					<!-- <div class="col-lg-10 offset-lg-1 col-xl-10 offset-xl-1  col-xxl-10 offset-xxl-1"> -->
+					<div class="col-lg-12 col-xl-12 col-xxl-12">
 
 						<div class="form-wrapper flowers neela-style">
 							<h1 class="section-title">Parteciperai?</h1>
