--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-2 menu-wrapper">
+					<div class="col-xl-12 col-lg-12 menu-wrapper">
 						<div class="neela-style"><span class="h-lines"></span><span class="v-lines"></span>
 							<div class="menu-top-flowers"></div>
 
@@ -495,8 +495,8 @@
 								<li>
 									<div class="row">
 										<div class="col-md-3 col-xl-3 my-auto"><img class="img-fluid" src="images/fuji_sakura.png"></div>
-										<div class="col-md-6 col-xl-6 text-center my-auto">
-											<h4><span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br>
+										<div class="col-md-6 col-xl-6 text-center my-auto" style="position: relative; z-index: 1;">
+											<h4 style="position: relative; z-index: 1;"><span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br>
 											Intestato a<br>
 											Giulia Lattanzi e Paolo Fantozzi</h4>
 											<br>
