--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 		<!-- END THE WEDDING SECTION -->
 
 		<!-- BEGIN WEDDING LOCATION SECTION -->
-		<section id="location">
+		<section id="location" class="side-flowers">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12">
@@ -470,8 +470,34 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 wedding-details">
+						<i class="icon-big-church"></i>
+						<h4>Cerimonia<small>10:30 - 11:30</small></h4>
+						<p>Villa D'Este<br>Piazza Trento, Tivoli</p>
+					</div>
+
+					<div class="col-md-4 wedding-details">
+						<i class="icon-photo-camera"></i>
+						<h4>Visita della villa<small>subito dopo la cerimonia</small></h4>
+						<p>Chi non è mai stato a Villa D'Este, o chi è semplicemente interessato, potrà visitare la villa insieme ad una guida abilitata.</p>
+					</div>
+
+					<div class="col-md-4 wedding-details">
+						<i class="icon-champagne-glasses"></i>
+						<h4>Ricevimento<small>12:00 - 17:00</small></h4>
+						<p>Ristorante Sibilla<br>Via della Sibilla, Tivoli</p>
+					</div>
+				</div>
+			</div>
 		</section>
 		<!-- END WEDDING LOCATION SECTION -->
+
+		<section id="wedding-details">
+
+		</section>
 
 		<!-- BEGIN WEDDING GIFTS SECTION -->
 		<section class="menu-section no-padding-top no-padding-bottom" id="giftregistry">
