--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
 									<span class="neela-style">A scuola</span>
 								</div>
 
-								<div class="image-1" data-parallax="-4" data-animation-direction="from-left" data-animation-delay="250">
-									<img src="images/scuola_paolo1.jpg" alt="">
+								<div class="image-1" data-parallax="6" data-animation-direction="from-right" data-animation-delay="250">
+									<img src="images/scuola_julia1.jpeg" alt="">
 								</div>
 
-								<div class="image-2" data-parallax="6" data-animation-direction="from-right" data-animation-delay="250">
-									<img src="images/scuola_julia1.jpeg" alt="">
+								<div class="image-2" data-parallax="-4" data-animation-direction="from-left" data-animation-delay="250">
+									<img src="images/scuola_paolo1.jpg" alt="">
 								</div>
 
 								<div class="description-wrapper" data-parallax="-6" data-animation-direction="from-bottom" data-animation-delay="250">
@@ -437,7 +437,7 @@
 							<div class="info-wrapper" data-animation-direction="from-bottom" data-animation-delay="100">
 								<div class="location-info">
 									<div class="neela-style">
-										<h4 class="has-icon"><i class="icon-big-church"></i>Cerimonia<small>10:30</small></h4>
+										<h4 class="has-icon"><i class="icon-two-hearts"></i>Cerimonia<small>10:30</small></h4>
 										<h5>Villa D'Este</h5>
 										<p>Piazza Trento, Tivoli</p>
 
@@ -445,7 +445,7 @@
 
 										<h4 class="has-icon"><i class="icon-champagne-glasses"></i>Ricevimento<small>a seguire</small></h4>
 										<h5>Ristorante Sibilla</h5>
-										<p>Via della Sibilla, Tivoli</p>
+										<p>Via della Sibilla 42, Tivoli</p>
 									</div>
 								</div>
 							</div>
@@ -455,8 +455,9 @@
 
 								<div class="map_pins">
 									<ul class="pins">
-										<li><i class="fas fa-bell"></i>Cerimonia</li>
+										<li><i class="far fa-heart"></i>Cerimonia</li>
 										<li><i class="fas fa-glass-cheers"></i>Ricevimento</li>
+										<li><i class="fas fa-parking"></i>Parcheggio</li>
 										<!-- <li><i class="fas fa-bed"></i>Accomodations</li>
 										<li><i class="fas fa-plane"></i>Transportation</li> -->
 									</ul>
@@ -474,7 +475,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 wedding-details">
-						<i class="icon-big-church"></i>
+						<i class="icon-two-hearts"></i>
 						<h4>Cerimonia<small>10:30 - 11:30</small></h4>
 						<p>Villa D'Este<br>Piazza Trento, Tivoli</p>
 					</div>
@@ -522,9 +523,12 @@
 									<div class="row">
 										<div class="col-md-3 col-xl-3 my-auto"><img class="img-fluid" src="images/fuji_sakura.png"></div>
 										<div class="col-md-6 col-xl-6 text-center my-auto" style="position: relative; z-index: 1;">
-											<h4 style="position: relative; z-index: 1;"><span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br>
-											Intestato a<br>
-											Giulia Lattanzi e Paolo Fantozzi</h4>
+											<h4 style="position: relative; z-index: 2;">
+												<!-- <span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br> -->
+												IT13R0200839452000106878954<br>
+												Intestato a<br>
+												Giulia Lattanzi e Paolo Fantozzi
+											</h4>
 											<br>
 										</div>
 										<div class="col-md-3 col-xl-3 my-auto text-center"><img class="img-fluid" src="images/sushi.png" style="max-width: 60%;"></div>
