--- a/index.html
+++ b/index.html
@@ -642,25 +642,34 @@
 
 								<li>
 									<div class="row">
-										<div class="col-md-3 col-xl-3 my-auto"><img class="img-fluid"
-												src="images/fuji_sakura.png"></div>
-										<div class="col-md-6 col-xl-6 text-center my-auto"
-											style="position: relative; z-index: 1;">
-											<h4 style="position: relative; z-index: 2;">
-												<div class="d-flex justify-content-center align-items-center">
-													<div id="myText" >IT13R0200839452000106878954</div>
-													<button class="btn btn-primary text-light text-center"
-														onclick="copyContent()" id="copyButton">Copia</button> <br>
-												</div>
-
-												<!-- <span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br> -->
-												Intestato a<br>
-												Giulia Lattanzi e Paolo Fantozzi
-											</h4>
-											<br>
+										<div class="row justify-content-center align-items-center">
+											<img class="img-fluid" style="width: 250px;"
+												src="images/fuji_sakura.png">
 										</div>
-										<div class="col-md-3 col-xl-3 my-auto text-center"><img class="img-fluid"
-												src="images/sushi.png" style="max-width: 60%;"></div>
+										<div class="col-12 mt-2">
+											<h3>IBAN</h3>
+
+											<div class="row justify-content-center align-items-center">
+												<div class="col-auto">
+													<h4 id="myText">IT13R0200839452000106878954</h4>
+												</div>
+												<div class="col-auto">
+													<button class="btn btn-primary btn-sm text-light text-center"
+													onclick="copyContent()" id="copyButton">Copia</button>
+												</div>
+											</div>
+
+											<!-- <span>IT13</span><span class="visually-spaced">R020</span><span class="visually-spaced">0839</span><span class="visually-spaced">4520</span><span class="visually-spaced">0010</span><span class="visually-spaced">6878</span><span class="visually-spaced">954</span><br> -->
+											<div class="mt-2 mb-5">
+												Intestato a<br>
+											Giulia Lattanzi e Paolo Fantozzi
+											<br>
+											</div>
+										</div>
+										<div class="row justify-content-center align-items-center">
+											<img class="img-fluid" style="width: 200px;"
+												src="images/sushi.png">
+										</div>
 									</div>
 								</li>
 							</ul>
@@ -708,9 +717,9 @@
 					<!-- <div class="col-lg-10 offset-lg-1 col-xl-10 offset-xl-1  col-xxl-10 offset-xxl-1"> -->
 					<div class="col-lg-12 col-xl-12 col-xxl-12">
 
-						<div class="form-wrapper flowers neela-style">
+						<div class="form-wrapper flowers neela-style" style="border:none">
 							<h1 class="section-title">Parteciperai?</h1>
-							<div class="container justify-content-center align-items-center mx-auto"
+							<div class="container-fluid justify-content-center align-items-center mx-auto"
 								style="display: flex; justify-content: center;">
 								<iframe
 									src="https://docs.google.com/forms/d/e/1FAIpQLScNwq9jqxHTDOaUtgki3c3QPWzrcj3SDD0FQYirt-MG2k3CYw/viewform?embedded=true"
