--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							<div class="hover-info neela-style">
 								<div class="content">
 									<h3>Paolo Fantozzi<small>Lo sposo</small></h3>
-									<p><i class="fas fa-dice-d20"></i> + <i class="fas fa-desktop"> + </i><i
+									<p><i class="fas fa-dice-d20"></i> + <a href="terminal.html"><i class="fas fa-desktop"> + </i></a><i
 											class="fas fa-guitar"></i></p>
 									<!-- <ul class="sn-icons">
 										<li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
