--- a/index.html
+++ b/index.html
@@ -816,6 +816,43 @@
 		</section>
 		<!-- END CONTACTS SECTION -->
 
+		<section id="easteregg">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<h2 class="section-title">Easter Egg</h2>
+					</div>
+				</div>
+			</div>
+
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						Nel sito è nascosto un easter egg (per chi non sapesse cos'è può scoprirlo <a href="https://it.wikipedia.org/wiki/Easter_egg">qui</a>,
+						ma possiamo riassumerlo come una caccia al tesoro digitale).<br>
+						Al primo che l'ha trovato è stato concesso di decidere il nome di un tavolo. Anche se non ci sono più ricompense, puoi entrare nella
+						classifica sottostante trovandolo.<br>
+						Buona caccia!
+					</div>
+				</div>
+				<div class="row" style="margin-top: 50px;">
+					<div class="col-md-4 offset-md-4">
+						<table class="table table-sm text-center">
+							<colgroup span="3"></colgroup>
+							<tr>
+								<th colspan="3" scope="colgroup"><i class="fa fa-key" style="color: blue;"></i><i class="fa fa-key" style="color: green;"></i><i class="fa fa-key" style="color: red;"></i></th>
+							</tr>
+							<tr>
+								<td>1</td>
+								<td>Simone (B) Pizzurro</td>
+								<td>31/10/2023 01:17</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+		</section>
+
 
 		<!-- BEGIN FOOTER -->
 		<footer id="footer-onepage" class="bg-color">
