--- a/index.html
+++ b/index.html
@@ -830,14 +830,14 @@
 					<div class="col-md-12 text-center">
 						Nel sito è nascosto un easter egg (per chi non sapesse cos'è può scoprirlo <a href="https://it.wikipedia.org/wiki/Easter_egg">qui</a>,
 						ma possiamo riassumerlo come una caccia al tesoro digitale).<br>
-						Al primo che l'ha trovato è stato concesso di decidere il nome di un tavolo. Anche se non ci sono più ricompense, puoi entrare nella
+						Al primo che l'ha trovato è stato concesso di decidere il nome di un tavolo. Anche se non ci sono più ricompense, potete entrare nella
 						classifica sottostante trovandolo.<br>
 						Buona caccia!
 					</div>
 				</div>
 				<div class="row" style="margin-top: 50px;">
 					<div class="col-md-4 offset-md-4">
-						<table class="table table-sm text-center">
+						<table class="table table-sm text-center align-middle">
 							<colgroup span="3"></colgroup>
 							<tr>
 								<th colspan="3" scope="colgroup"><i class="fa fa-key" style="color: blue;"></i><i class="fa fa-key" style="color: green;"></i><i class="fa fa-key" style="color: red;"></i></th>
@@ -846,6 +846,11 @@
 								<td>1</td>
 								<td>Simone (B) Pizzurro</td>
 								<td>31/10/2023 01:17</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>Giulia Capasso<br>&amp;<br>Marco Di Rocco</td>
+								<td>31/10/2023 13:33</td>
 							</tr>
 						</table>
 					</div>
